# aero-eval

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/aero_eval/: __init__.py  result.py
src/aero_eval/checks/: __init__.py  dead_neurons.py  nan_inf.py  overfit.py  param_update.py
src/aero_eval/integrations/: __init__.py  hf_trainer.py
studies/: README.md  _assembler.py  reassemble_all.py
studies/baseline/: README.md  evaluate.py  generate.py
studies/baseline/prompts/: attention_task.md
studies/gqa/: README.md  evaluate.py  generate.py
studies/gqa/prompts/: gqa_task.md
tests/: conftest.py  test_result.py  test_smoke.py
tests/checks/: test_dead_neurons.py  test_nan_inf.py  test_overfit.py  test_param_update.py
tests/fpr/: conftest.py  test_known_good_models.py
tests/integrations/: test_hf_trainer.py
tests/studies/: test_assemble_module.py
